--- a/src/template/Footer/Footer.css
+++ b/src/template/Footer/Footer.css
@@ -1,4 +1,7 @@
 .footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
     width: 100%;
     background: #000;
     color: lightseagreen;
