--- a/src/template/Footer/Footer.css
+++ b/src/template/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -9,6 +9,7 @@
     justify-content: space-evenly;
     align-items: center;
     padding: 20px 0;
+    margin-top: 20px;
 }
 
 .footerRight ul {
