--- a/src/Page/Telephone/Telephone.css
+++ b/src/Page/Telephone/Telephone.css
@@ -1,10 +1,11 @@
 .boderCard {
-    margin: 20px 10px;
+    margin: 30px 10px;
     padding: 20px;
     gap: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    position: relative;
 }
 
 .gutterCard {
