--- a/src/component/CardPhone/CardPhone.css
+++ b/src/component/CardPhone/CardPhone.css
@@ -2,35 +2,37 @@
     background: #ede6e6;
     text-align: 'center';
     width: 23%;
-    height: 450px;
     border: 1px solid #8cdeec;
     border-radius: 35px;
     display: flex;
     flex-wrap: wrap;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     overflow: hidden;
+
 }
 
 .bgCard:hover {
     box-shadow: 0 10px 20px #6e9da5;
 }
 
-.imgPhone {
-    width: 100%;
-    transform: scale(1);
-}
 
 img {
-    height: 250px;
+
     width: 100%;
-    /* padding: 0 50px; */
     object-fit: contain;
     padding-bottom: 15px;
 }
 
-img:hover {
-    transform: scale(1.5);
-    overflow: hidden;
+.contentCard {
+    padding: 10px;
+}
+
+.contentCard :nth-child(1) {
+    text-align: center;
+    background: linear-gradient(to right, #54d1d1 30%, #6b34ae 70%);
+    background-clip: text;
+    color: transparent;
+    text-transform: uppercase;
 }
 
 .bottomRight {
@@ -47,4 +49,43 @@ img:hover {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+
+.desAdd {
+    background: #f7f4f4;
+    color: red;
+    border-radius: 50%;
+    box-shadow: 5px 3px 7px 1px #b8b3b3;
+    position: relative;
+}
+
+.sizeAdd {
+    border: none;
+    outline: none;
+    font-size: larger;
+    position: absolute;
+    top: 0px;
+    left: 8px;
+}
+
+.desAdd:hover {
+    outline: none;
+    border: none;
+    background: #e5d9d9 !important;
+    color: red !important;
+    box-shadow: inset 0 0 8px -1px #f6f6f6 !important;
+}
+
+.desDetail {
+    width: 50px;
+    position: relative;
+    background: #160e7e;
+    border-radius: 10% 30%;
+
+}
+
+.sizeDetail {
+    position: absolute;
+    top: 3px;
+    left: 6px;
 }
