--- a/src/component/Detail/Detail.css
+++ b/src/component/Detail/Detail.css
@@ -1,10 +1,21 @@
 .center {
     text-align: center;
+    margin: 20px 30px;
+    padding: 20px;
+    background: #dcedae;
+    box-shadow: 8px 11px 20px 0px #9bb567;
+    margin: 50px;
+    padding: 50px;
+
+}
+
+h1 {
+    text-transform: uppercase;
 }
 
 .contentDetail {
     max-width: 1280px;
     margin: auto;
     text-align: left;
-
+    margin-top: 30px;
 }
